# quantsim

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
backtesting/: engine.py  execution.py  order_manager.py  vectorized.py  walk_forward.py
backtesting/__pycache__/: vectorized._simulate_portfolio_numba-42.py312.1.nbc  vectorized._simulate_portfolio_numba-42.py312.2.nbc  vectorized._simulate_portfolio_numba-42.py312.3.nbc  vectorized._simulate_portfolio_numba-42.py312.4.nbc  vectorized._simulate_portfolio_numba-42.py312.5.nbc  vectorized._simulate_portfolio_numba-42.py312.nbi
core/: config.py  database.py  database_v2.py  event_queue.py  events.py  logging_config.py  schemas.py
dashboard/: app.py
data/: data_handler.py  ingestion.py  options.py
examples/: 01_walking_skeleton.py  02_parameter_sweep.py  03_portfolio_optimization.py  04_full_pipeline.py  05_research_workflow.py
paper_trading/: alpaca_handler.py  engine.py
portfolio/: manager.py  optimization.py  portfolio.py  sizing.py
reporting/: advanced.py  analytics.py  monitor.py  tearsheet.py
risk/: risk_manager.py
scripts/: bootstrap_data.py  run_backtest.py  run_paper_trading.py  run_stress_test.py  run_wfo.py
strategies/: garch_vol.py  mean_reversion.py  ml_alpha.py  ml_strategy.py  momentum_factor.py  options_strategies.py  registry.py  trend.py
tests/: conftest.py  test_engine.py  test_engine_correctness.py  test_full_pipeline.py  test_integration_e2e.py  test_v2_additions.py  test_v3_additions.py  test_v4_gapfill.py  test_v5_finalfixes.py
