[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantsim"
version = "2.0.0"
description = "Production-grade quantitative trading simulator. Zero paid dependencies."
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["quantitative finance", "backtesting", "algorithmic trading", "options"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.40",
    "fredapi>=0.5.1",
    "pandas-market-calendars>=4.3.0",
    "py_vollib>=1.0.1",
    "sqlalchemy>=2.0.0",
    "arch>=6.2.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.0.0", "scikit-learn>=1.3.0"]
optimization = ["cvxpy>=1.4.0", "scikit-learn>=1.3.0"]
trading = ["alpaca-py>=0.20.0"]
dashboard = ["streamlit>=1.32.0", "plotly>=5.18.0"]
fast = ["numba>=0.57.0"]
all = [
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "cvxpy>=1.4.0",
    "alpaca-py>=0.20.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "numba>=0.57.0",
]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
quantsim-backtest = "scripts.run_backtest:main"
quantsim-paper   = "scripts.run_paper_trading:main"
quantsim-wfo     = "scripts.run_wfo:main"
quantsim-bootstrap = "scripts.bootstrap_data:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires live data/API",
    "slow: takes > 5 seconds",
    "gpu: requires GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning:pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*", "data*", "strategies*", "backtesting*",
    "portfolio*", "risk*", "reporting*", "paper_trading*",
    "dashboard*", "scripts*",
]
